# Chess-Engine-

./: CMakeLists.txt  README.md  attackTables.cpp  bitboards.cpp  bitboards.h  board.cpp  board.h  chessboard.cpp  chessboard.h  main.cpp  perft.bat
.cache/clangd/index/: attackTables.cpp.561D6F9EBC622757.idx  attackTables.h.1639BAD3ACCD84E6.idx  bitboards.cpp.92BD13E64DB58D0D.idx  bitboards.h.B791E1234F0FBFB0.idx  chessboard.cpp.21908AC8721C2B80.idx  chessboard.h.943B306DE266B47C.idx  eval.cpp.7AF94DB146E1F51A.idx  eval.h.5051C24363685AF7.idx  main.cpp.5589A9AA0E8A3D7A.idx  wrapper.cpp.C199F3CE091CE76C.idx
Engine/GUI/: chessBoardWrap.cp311-win_amd64.pyd  gui.py  setup.py
Engine/GUI/GUI/: gui.py  setup.py
Engine/GUI/myenv/: pyvenv.cfg
Engine/GUI/myenv/Scripts/: activate
Engine/Src/: attackTables.cpp  bitboards.cpp  chessboard.cpp  eval.cpp  main.cpp  wrapper.cpp
Engine/headers/: attackTables.h  bitboards.h  chessboard.h  eval.h
Engine/include/: bitboards.h  chessboard.h  eval.h  utils.h
GUI/: gui.py  setup.py
GUI/myenv/Scripts/: activate.bat
